--- a/bibtex.bib
+++ b/bibtex.bib
@@ -25,3 +25,63 @@
   publisher = "Addison-Wesley",
   year      = 1994
 }
+
+@book{vallis_atmospheric_2006,
+  title = {{Atmospheric and Oceanic Fluid Dynamics: Fundamentals and Large-scale Circulation}},
+  shorttitle = {{Atmospheric and Oceanic Fluid Dynamics}},
+  author = {Vallis, Geoffrey K.},
+  year = {2006},
+  month = nov,
+  publisher = {Cambridge University Press},
+  address = {Cambridge},
+  abstract = {Fluid dynamics is fundamental to our understanding of the atmosphere and oceans. Although many of the same principles of fluid dynamics apply to both the atmosphere and oceans, textbooks tend to concentrate on the atmosphere, the ocean, or the theory of geophysical fluid dynamics (GFD). This textbook provides a comprehensive unified treatment of atmospheric and oceanic fluid dynamics. The book introduces the fundamentals of geophysical fluid dynamics, including rotation and stratification, vorticity and potential vorticity, and scaling and approximations. It discusses baroclinic and barotropic instabilities, wave-mean flow interactions and turbulence, and the general circulation of the atmosphere and ocean. Student problems and exercises are included at the end of each chapter. Atmospheric and Oceanic Fluid Dynamics: Fundamentals and Large-Scale Circulation will be an invaluable graduate textbook on advanced courses in GFD, meteorology, atmospheric science and oceanography, and an excellent review volume for researchers. Additional resources are available at www.cambridge.org/9780521849692.},
+  isbn = {978-0-521-84969-2},
+  langid = {Anglais},
+  file = {/home/aucf/ARCHIVES/BIBLIO/Books/vallis-aofd.pdf}
+
+
+@book{frisch_turbulence_1995,
+  title = {Turbulence: {{The Legacy}} of {{A}}. {{N}}. {{Kolmogorov}}},
+  shorttitle = {Turbulence},
+  author = {Frisch, Uriel},
+  year = {1995},
+  edition = {Cambridge University Press},
+  doi = {10.1017/CBO9781139170666},
+  urldate = {2020-01-04},
+  abstract = {Cambridge Core - Nonlinear Science and Fluid Dynamics - Turbulence -  by Uriel Frisch},
+  langid = {english},
+  file = {/home/aucf/Zotero/storage/IVTBVXYJ/FD8C5E35E5F1CA850E017461942A59AC.html}
+}
+
+@article{taylor_submesoscale_2023,
+  title = {Submesoscale {{Dynamics}} in the {{Upper Ocean}}},
+  author = {Taylor, John R. and Thompson, Andrew F.},
+  year = {2023},
+  month = jan,
+  journal = {Annual Review of Fluid Mechanics},
+  volume = {55},
+  number = {1},
+  pages = {103--127},
+  issn = {0066-4189, 1545-4479},
+  doi = {10.1146/annurev-fluid-031422-095147},
+  urldate = {2024-04-18},
+  abstract = {Oceanic motions with spatial scales of 200 m--20 km, called submesoscales, are ubiquitous in the upper ocean and serve as a key intermediary between larger-scale balanced dynamics and unbalanced turbulence. Here, we introduce the fluid dynamics of submesoscales and contrast them with motions at larger and smaller scales. We summarize the various ways in which submesoscales develop due to instabilities that extract potential or kinetic energy from larger-scale balanced currents; some instabilities have counterparts at larger scales, while others are distinct to the submesoscale regime. Submesoscales modify the density stratification in the upper ocean and redistribute energy between scales. These energy transfers are complex, having both up-scale and down-scale components. Submesoscale eddies and fronts also contribute to a spatially heterogeneous distribution of shear and restratification that leave an imprint on upper ocean turbulence. The impact of submesoscales on the Earth's climate remains an exciting research frontier.},
+  copyright = {http://creativecommons.org/licenses/by/4.0/},
+  langid = {english},
+  file = {/home/aucf/ARCHIVES/BIBLIO/Submeso-echelle/Taylor_Thompson_AR_2023.pdf}
+
+@article{hilt_numerical_2020,
+  title = {Numerical Modelling of Hydraulic Control, Solitary Waves and Primary Instabilities in the {{Strait}} of {{Gibraltar}}},
+  author = {Hilt, Margaux and Auclair, Francis and Benshila, Rachid and Bordois, Lucie and Capet, Xavier and Debreu, Laurent and Dumas, Franck and Jullien, Swen and Lemari{\'e}, Florian and Marchesiello, Patrick and Nguyen, Cyril and Roblou, Laurent},
+  year = {2020},
+  month = jul,
+  journal = {Ocean Modelling},
+  volume = {151},
+  pages = {101642},
+  issn = {14635003},
+  doi = {10.1016/j.ocemod.2020.101642},
+  urldate = {2021-08-17},
+  abstract = {A two-dimensional, vertical section of the Strait of Gibraltar is simulated numerically with the nonhydrostatic/ non-Boussinesq three-dimensional CROCO model to investigate details of small-scale dynamics. The proposed configuration is simple, computationally efficient and incorporates the configuration of sills characteristic of this region. Despite the shortcomings of a 2D representation, this configuration provides a realistic depiction of small-scale mechanisms in the strait during a typical tidal cycle: internal solitary waves generation and propagation, occurrence of hydraulic controls and hydraulic jumps at the sills and presence of active turbulent patches. In particular, the well-known eastward propagation of large amplitude internal waves is assessed using the Korteweg de Vries (KdV) propagation model for solitary waves.},
+  langid = {english},
+  file = {/home/aucf/ARCHIVES/Papiers/PDF/OM_20.pdf}
+}
